--- a/styles/components/_hand.scss
+++ b/styles/components/_hand.scss
@@ -81,3 +81,13 @@
     border-bottom-right-radius: 0;
   }
 }
+
+@media screen and (max-height: 820px) {
+  .hand {
+    height: 100%;
+    gap: 0;
+    &__cards {
+      height: 15.5rem;
+    }
+  }
+}
